--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
         </div>
         <div class="row">
           <h4 id="titulo-tarefas" class="col-8 mx-auto">Tarefas</h4>
-          <ul class="col-8 mx-auto">
-            <li>
+          <!-- <div class="item-lista">Teste</div> -->
+          <ul class="lista col-8 mx-auto">
+            <li class="item-lista">
               Passar no supermercado
               <a href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
             <li
+              class="item-lista"
               style="text-decoration: line-through; text-decoration-style: double;"
             >
               Comprar remédios na farmácia
@@ -66,7 +68,7 @@
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
-            <li>
+            <li class="item-lista">
               Pagar boleto
               <a href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
