Atualizado index.html e adicionada aula-22

--- a/index.html
+++ b/index.html
@@ -55,22 +55,25 @@
           <ul class="lista col-8 mx-auto">
             <li class="item-lista">
               Passar no supermercado
-              <a href="#">
+              <a class="check-item" href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
             <li
               class="item-lista"
-              style="text-decoration: line-through; text-decoration-style: double;"
+              style="
+                text-decoration: line-through;
+                text-decoration-style: double;
+              "
             >
               Comprar remédios na farmácia
-              <a href="#">
+              <a class="check-item" href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
             <li class="item-lista">
               Pagar boleto
-              <a href="#">
+              <a class="check-item" href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
