--- a/index.html
+++ b/index.html
@@ -59,13 +59,7 @@
                 <i class="fa fa-check" aria-hidden="true"></i>
               </a>
             </li>
-            <li
-              class="item-lista"
-              style="
-                text-decoration: line-through;
-                text-decoration-style: double;
-              "
-            >
+            <li class="item-lista done">
               Comprar remédios na farmácia
               <a class="check-item" href="#">
                 <i class="fa fa-check" aria-hidden="true"></i>
