--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div class="row">
           <a class="col-8 mx-auto limpar" href="#">
             <button
+              id="limparBtn"
               type="button"
               class="text-uppercase btn btn-danger btn-sm btn-block"
             >
