--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <div class="col-8 mx-auto">
             <button
               id="limparBtn"
+              disabled
               class="btn btn-danger btn-sm btn-block text-uppercase"
             >
               Limpar Lista
